<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PizzaCustomizationActivity">
    <TextView
            android:text="@string/pizza_customization_heading"
            android:layout_width="379dp"
            android:layout_height="29dp" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"/>
    <Spinner
            android:layout_width="131dp"
            android:layout_height="22dp" android:id="@+id/spinner"
            android:animationCache="false"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginEnd="12dp"
            android:entries="@array/sizes"/>
    <ListView
            android:layout_width="152dp"
            android:layout_height="263dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="216dp"
            app:layout_constraintStart_toStartOf="@+id/textView" android:id="@+id/additionalToppings"
            android:layout_marginStart="4dp" android:choiceMode="singleChoice"
            android:listSelector="@android:color/darker_gray"/>
    <Button
            android:text="@string/addButton"
            android:layout_width="65dp"
            android:layout_height="39dp" android:id="@+id/addButton"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="308dp" app:layout_constraintEnd_toStartOf="@+id/selectedToppings"
            android:onClick="onAddButtonClick"/>
    <Button
            android:text="@string/removeButton"
            android:layout_width="65dp"
            android:layout_height="40dp" android:id="@+id/removeButton"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/addButton"
            app:layout_constraintStart_toEndOf="@+id/additionalToppings" android:layout_marginStart="4dp"
            android:onClick="onRemoveButtonClick"/>
    <ListView
            android:layout_width="152dp"
            android:layout_height="263dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="216dp"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:id="@+id/selectedToppings"
            android:choiceMode="singleChoice" android:listSelector="@android:color/darker_gray"/>
    <Button
            android:text="@string/addToOrder"
            android:layout_width="162dp"
            android:layout_height="39dp" android:id="@+id/addToOrderButton"
            app:layout_constraintStart_toStartOf="@+id/removeButton"
            android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/selectedToppings"
            android:layout_marginTop="12dp" android:onClick="onAddToOrderClick"/>
    <TextView
            android:text="@string/price"
            android:layout_width="49dp"
            android:layout_height="23dp" android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/additionalToppings"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/addToOrderButton" android:layout_marginEnd="52dp"
            android:textSize="16sp"/>
    <ImageView
            android:layout_width="171dp"
            android:layout_height="122dp" android:id="@+id/pizzaView"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="28dp"
            app:layout_constraintEnd_toStartOf="@+id/spinner" android:layout_marginEnd="56dp"
            android:contentDescription="@string/image_view"/>
    <TextView
            android:text="@string/additionalToppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintBottom_toTopOf="@+id/additionalToppings"
            app:layout_constraintStart_toStartOf="@+id/pizzaView" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/selectedToppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/selectedToppings"
            app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="104dp"/>
    <TextView
            android:text="@string/defaultPrice"
            android:layout_width="47dp"
            android:layout_height="22dp" android:id="@+id/pizzaPrice"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/removeButton" android:layout_marginTop="100dp"
            android:layout_marginStart="4dp" android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>