<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CurrentOrderActivity"
>

    <TextView
            android:text="@string/current_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            android:text="@string/customer_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@+id/pizzasListView"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customerPhoneNumberTextField"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="52dp" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/textView11"/>
    <ListView
            android:layout_width="372dp"
            android:layout_height="305dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            android:layout_marginTop="20dp" android:id="@+id/pizzasListView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview15"
            android:text="@string/subtotal_label"
            app:layout_constraintTop_toBottomOf="@+id/pizzasListView"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/pizzasListView"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subtotalTextField"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textview15"
            app:layout_constraintTop_toTopOf="@+id/textview15"
            android:text="@string/defaultPrice"/>
    <TextView
            android:text="@string/sales_tax_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview16"
            app:layout_constraintStart_toStartOf="@+id/textview15"
            app:layout_constraintTop_toBottomOf="@+id/textview15"
            android:layout_marginTop="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/salesTaxTextField"
            app:layout_constraintStart_toEndOf="@+id/textview16"
            app:layout_constraintTop_toTopOf="@+id/textview16"
            android:text="@string/defaultPrice" android:textStyle="bold"/>
    <TextView
            android:text="@string/order_total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textview16"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textview16"/>
    <TextView
            android:text="@string/defaultPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderTotalTextField"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/textView17"
            app:layout_constraintStart_toEndOf="@+id/textView17"/>
    <Button
            android:text="@string/place_order"
            android:layout_width="152dp"
            android:layout_height="40dp" android:id="@+id/button2"
            android:onClick="onPlaceOrderButtonClick"
            app:layout_constraintTop_toBottomOf="@+id/pizzasListView"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="@+id/pizzasListView" android:layout_marginEnd="36dp"/>
    <TextView
            android:text="@string/remove_pizza_instructions"
            android:layout_width="218dp"
            android:layout_height="25dp" android:id="@+id/remove_pizza_instructions"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/pizzasListView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>