<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/pizza_customization_heading"
            android:layout_width="379dp"
            android:layout_height="29dp" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"/>
    <Spinner
            android:layout_width="110dp"
            android:layout_height="25dp" android:id="@+id/spinner"
            android:animationCache="false"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginEnd="28dp"
            android:entries="@array/sizes"/>
    <ListView
            android:layout_width="152dp"
            android:layout_height="263dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="264dp"
            app:layout_constraintStart_toStartOf="@+id/textView" android:id="@+id/additionalToppings"/>
    <ListView
            android:layout_width="152dp"
            android:layout_height="263dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="264dp"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:id="@+id/selectedToppings"/>
    <Button
            android:text="@string/addButton"
            android:layout_width="65dp"
            android:layout_height="40dp" android:id="@+id/addButton"
            app:layout_constraintStart_toEndOf="@+id/additionalToppings"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="352dp"
            android:layout_marginStart="4dp"/>
    <Button
            android:text="@string/removeButton"
            android:layout_width="65dp"
            android:layout_height="40dp" android:id="@+id/removeButton"
            app:layout_constraintTop_toBottomOf="@+id/addButton"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toStartOf="@+id/selectedToppings"
            android:layout_marginEnd="4dp"/>
    <TextView
            android:text="@string/price"
            android:layout_width="48dp"
            android:layout_height="22dp" android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/additionalToppings"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toStartOf="@+id/addToOrderButton" android:layout_marginEnd="72dp"/>
    <TextView
            android:text="@string/defaultPrice"
            android:layout_width="48dp"
            android:layout_height="22dp" android:id="@+id/pizzaPrice"
            app:layout_constraintTop_toBottomOf="@+id/additionalToppings"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toStartOf="@+id/addToOrderButton" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/addToOrder"
            android:layout_width="137dp"
            android:layout_height="41dp" android:id="@+id/addToOrderButton"
            app:layout_constraintStart_toEndOf="@+id/removeButton"
            app:layout_constraintTop_toBottomOf="@+id/selectedToppings" android:layout_marginTop="56dp"
            android:layout_marginStart="4dp"/>
    <ImageView
            android:layout_width="201dp"
            android:layout_height="159dp" android:id="@+id/pizzaView"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="36dp"
            app:layout_constraintEnd_toStartOf="@+id/spinner" android:layout_marginEnd="28dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>