<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/store_orders"
            android:layout_width="102dp"
            android:layout_height="24dp"
            android:textAlignment="center" android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/storeOrdersButton"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="@+id/storeOrdersButton"
            android:layout_marginEnd="4dp"/>
    <ImageButton
            android:layout_width="108dp"
            android:layout_height="102dp"
            android:id="@+id/storeOrdersButton"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="@+id/currentOrdersButton"
            android:contentDescription="@string/store_orders"
            android:foreground="@drawable/store_orders"
            android:onClick="onStoreOrdersClick"/>
    <TextView
            android:text="@string/current_orders"
            android:layout_width="102dp"
            android:layout_height="24dp"
            android:textAlignment="center" android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/currentOrdersButton"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/currentOrdersButton"
            android:layout_marginEnd="4dp"/>
    <TextView
            android:text="@string/pepperoni_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAlignment="center" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/pepperoniButton"
            app:layout_constraintStart_toStartOf="@+id/pepperoniButton"
            android:layout_marginStart="4dp"/>
    <TextView
            android:text="@string/hawaiian_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/hawaiianButton"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/hawaiianButton"
            android:layout_marginStart="8dp"/>
    <ImageButton
            android:layout_width="119dp"
            android:layout_height="86dp"
            android:id="@+id/pepperoniButton"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/hawaiianButton"
            android:contentDescription="@string/pepperoni_pizza"
            android:foreground="@drawable/pepperoni_pizza"
            android:onClick="onPepperoniClick"/>
    <ImageButton
            android:layout_width="109dp"
            android:layout_height="85dp"
            android:id="@+id/hawaiianButton"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@+id/deluxeButton"
            android:contentDescription="@string/hawaiian_pizza"
            android:foreground="@drawable/hawaiian_pizza"
            android:onClick="onHawaiianClick"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="128dp"
            android:layout_height="31dp" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="380dp"
            android:layout_height="58dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="14dp" android:layout_marginStart="14dp"
            android:id="@+id/textInputLayout">


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/customer_phone_number"
                android:id="@+id/customerNumberTextField"
                tools:layout_editor_absoluteX="58dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageButton
            android:layout_width="120dp"
            android:layout_height="86dp"
            android:id="@+id/deluxeButton"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            android:contentDescription="@string/deluxe_pizza"
            android:foreground="@drawable/deluxe_pizza"
            android:onClick="onDeluxeClick"/>
    <TextView
            android:text="@string/deluxe_pizza"
            android:layout_width="102dp"
            android:layout_height="24dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/deluxeButton"
            android:layout_marginTop="8dp" android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/deluxeButton"
            android:layout_marginStart="4dp"/>
    <ImageButton
            android:layout_width="111dp"
            android:layout_height="120dp"
            android:id="@+id/currentOrdersButton"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            android:contentDescription="@string/current_orders"
            android:foreground="@drawable/current_order"
            android:layout_marginEnd="48dp"
            android:onClick="onCurrentOrdersClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>